--- a/client/index.html
+++ b/client/index.html
@@ -1,28 +1,35 @@
 <head>
   <title>Login Page</title>
-  <script src="https://cdn.auth0.com/js/auth0/9.3.1/auth0.min.js"></script>
+  <script src="https://cdn.auth0.com/js/lock/11.0.0/lock.min.js"></script>
 </head>
 
 <script>
   window.addEventListener('load', function () {
 
-    var webAuth = new auth0.WebAuth({
-      domain: 'lbdemo.eu.auth0.com',
-      clientID: 'VcP4dN0uPUmU77Y5MlnJMuRqVANzzc6R',
-      responseType: 'token id_token',
-      audience: 'http://localhost:3000',
-      scope: 'openid',
-      redirectUri: window.location.href
+    var lock = new Auth0Lock(
+      'VcP4dN0uPUmU77Y5MlnJMuRqVANzzc6R',
+      'lbdemo.eu.auth0.com'
+    );
+
+    lock.on("authenticated", function(authResult) {
+      // Use the token in authResult to getUserInfo() and save it to localStorage
+      lock.getUserInfo(authResult.accessToken, function(error, profile) {
+        if (error) {
+          // Handle error
+          return;
+        }
+
+        setSession(authResult);
+      });
     });
 
     var loginBtn = document.getElementById('btn-login');
 
     loginBtn.addEventListener('click', function (e) {
       e.preventDefault();
-      webAuth.authorize();
+      lock.show();
     });
 
-    // ...
     var loginStatus = document.querySelector('.container h4');
     var loginView = document.getElementById('login-view');
     var homeView = document.getElementById('home-view');
@@ -39,25 +46,6 @@
 
     logoutBtn.addEventListener('click', logout);
 
-    function handleAuthentication() {
-      webAuth.parseHash(function (err, authResult) {
-
-
-        if (authResult && authResult.accessToken && authResult.idToken) {
-          window.location.hash = '';
-          setSession(authResult);
-          loginBtn.style.display = 'none';
-          homeView.style.display = 'inline-block';
-        } else if (err) {
-          homeView.style.display = 'inline-block';
-          alert(
-            'Error: ' + err.error + '. Check the console for further details.'
-          );
-        }
-        displayButtons();
-      });
-    }
-
     function setSession(authResult) {
       // Set the time that the Access Token will expire at
       var expiresAt = JSON.stringify(
@@ -66,7 +54,7 @@
 
       console.log('************ authResult:', authResult);
 
-      localStorage.setItem('access_token', authResult.accessToken);
+      localStorage.setItem('access_token', authResult.idToken);
       localStorage.setItem('id_token', authResult.idToken);
       localStorage.setItem('expires_at', expiresAt);
     }
@@ -98,9 +86,6 @@
           'You are not logged in! Please log in to continue.';
       }
     }
-
-    handleAuthentication();
-
 
     document.getElementById('api-request-article').addEventListener('click', function () {
       var xmlHttp = new XMLHttpRequest();
