--- a/client/index.html
+++ b/client/index.html
@@ -157,7 +157,7 @@
   </nav>
 
   <main class="container">
-    <h4>API</h4>
+    <h4>API xP756s4jcwvm</h4>
 
     <button id="api-request-article">Get Articles (public)</button>
     <button id="api-request-secret">Get Secrets (logged in)</button>
