change source module for loopback-auth0-jwt

--- a/client/index.html
+++ b/client/index.html
@@ -96,7 +96,6 @@
       };
       xmlHttp.open("GET", 'http://localhost:3000/api/Articles', true); // true for asynchronous
       xmlHttp.setRequestHeader('Authorization', 'Bearer ' + localStorage.getItem('access_token'));
-      // xmlHttp.setRequestHeader('Authorization', 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImtpZCI6Ik5rRTNORFZHUXpnd01FTkZPRU01TkRSRVJFTXhNa00wUVVVeVFqZEROa1k0UmtNMFFUSTRPUSJ9.eyJpc3MiOiJodHRwczovL2xiZGVtby5ldS5hdXRoMC5jb20vIiwic3ViIjoiVmNQNGROMHVQVW1VNzdZNU1sbkpNdVJxVkFOenpjNlJAY2xpZW50cyIsImF1ZCI6Imh0dHA6Ly9sb2NhbGhvc3Q6MzAwMCIsImlhdCI6MTUyMDM1MjI2NCwiZXhwIjoxNTIwNDM4NjY0LCJhenAiOiJWY1A0ZE4wdVBVbVU3N1k1TWxuSk11UnFWQU56emM2UiIsImd0eSI6ImNsaWVudC1jcmVkZW50aWFscyJ9.M352IexQ8yQl8SgQ_IbE_nzsDHlYRb__3o46FO8V5dZrEyIgbuy73hIEruWKfWKDvC0H6rOq5I2jIgkYLYP_uMM0Kx_SDMb-asllr_AFfdDuL1kCFUoATMlDXze4MqdhxpL-1vgKgCOFpKnskzz9lCA2_MIHhFYU05gcMDrJLNXIvspYk0bGxkmFATL5eZsPbFA5qg7gJH_SwxRNLHBTOhrLwkSy2AXpTCLEAnx2lWBbriXxbgLF5tXwGBaNK_ckBcSIAW_7soOPz45wC6vCqcX8A0AR6sa3K7t41EYcIR0U3gF7FJlHzUvXpW5ShpLLzf4xpAPuPYIpqFErwHs6YA');
       xmlHttp.send(null);
     });
 
@@ -109,7 +108,6 @@
       };
       xmlHttp.open("GET", 'http://localhost:3000/api/Secrets', true); // true for asynchronous
       xmlHttp.setRequestHeader('Authorization', 'Bearer ' + localStorage.getItem('access_token'));
-      // xmlHttp.setRequestHeader('Authorization', 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImtpZCI6Ik5rRTNORFZHUXpnd01FTkZPRU01TkRSRVJFTXhNa00wUVVVeVFqZEROa1k0UmtNMFFUSTRPUSJ9.eyJpc3MiOiJodHRwczovL2xiZGVtby5ldS5hdXRoMC5jb20vIiwic3ViIjoiVmNQNGROMHVQVW1VNzdZNU1sbkpNdVJxVkFOenpjNlJAY2xpZW50cyIsImF1ZCI6Imh0dHA6Ly9sb2NhbGhvc3Q6MzAwMCIsImlhdCI6MTUyMDM1MjI2NCwiZXhwIjoxNTIwNDM4NjY0LCJhenAiOiJWY1A0ZE4wdVBVbVU3N1k1TWxuSk11UnFWQU56emM2UiIsImd0eSI6ImNsaWVudC1jcmVkZW50aWFscyJ9.M352IexQ8yQl8SgQ_IbE_nzsDHlYRb__3o46FO8V5dZrEyIgbuy73hIEruWKfWKDvC0H6rOq5I2jIgkYLYP_uMM0Kx_SDMb-asllr_AFfdDuL1kCFUoATMlDXze4MqdhxpL-1vgKgCOFpKnskzz9lCA2_MIHhFYU05gcMDrJLNXIvspYk0bGxkmFATL5eZsPbFA5qg7gJH_SwxRNLHBTOhrLwkSy2AXpTCLEAnx2lWBbriXxbgLF5tXwGBaNK_ckBcSIAW_7soOPz45wC6vCqcX8A0AR6sa3K7t41EYcIR0U3gF7FJlHzUvXpW5ShpLLzf4xpAPuPYIpqFErwHs6YA');
       xmlHttp.send(null);
     });
 
@@ -122,7 +120,6 @@
       };
       xmlHttp.open("GET", 'http://localhost:3000/api/Mines', true); // true for asynchronous
       xmlHttp.setRequestHeader('Authorization', 'Bearer ' + localStorage.getItem('access_token'));
-      // xmlHttp.setRequestHeader('Authorization', 'Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImtpZCI6Ik5rRTNORFZHUXpnd01FTkZPRU01TkRSRVJFTXhNa00wUVVVeVFqZEROa1k0UmtNMFFUSTRPUSJ9.eyJpc3MiOiJodHRwczovL2xiZGVtby5ldS5hdXRoMC5jb20vIiwic3ViIjoiVmNQNGROMHVQVW1VNzdZNU1sbkpNdVJxVkFOenpjNlJAY2xpZW50cyIsImF1ZCI6Imh0dHA6Ly9sb2NhbGhvc3Q6MzAwMCIsImlhdCI6MTUyMDM1MjI2NCwiZXhwIjoxNTIwNDM4NjY0LCJhenAiOiJWY1A0ZE4wdVBVbVU3N1k1TWxuSk11UnFWQU56emM2UiIsImd0eSI6ImNsaWVudC1jcmVkZW50aWFscyJ9.M352IexQ8yQl8SgQ_IbE_nzsDHlYRb__3o46FO8V5dZrEyIgbuy73hIEruWKfWKDvC0H6rOq5I2jIgkYLYP_uMM0Kx_SDMb-asllr_AFfdDuL1kCFUoATMlDXze4MqdhxpL-1vgKgCOFpKnskzz9lCA2_MIHhFYU05gcMDrJLNXIvspYk0bGxkmFATL5eZsPbFA5qg7gJH_SwxRNLHBTOhrLwkSy2AXpTCLEAnx2lWBbriXxbgLF5tXwGBaNK_ckBcSIAW_7soOPz45wC6vCqcX8A0AR6sa3K7t41EYcIR0U3gF7FJlHzUvXpW5ShpLLzf4xpAPuPYIpqFErwHs6YA');
       xmlHttp.send(null);
     });
   });
@@ -163,7 +160,7 @@
     <button id="api-request-secret">Get Secrets (logged in)</button>
     <button id="api-request-mine">Get Mines (owned)</button>
 
-    <pre id="response-content"></pre>
+    <pre id="response-content" style="text-wrap: normal"></pre>
 
 
   </main>
